css background color+images footer

--- a/prototype.html
+++ b/prototype.html
@@ -79,11 +79,10 @@
 		<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p>
 	</div>
 
-	<p id="updatetags">Receive updates about... <br> [Author] [Topic] [Tag] </p>
-	<p id="updatesocial">On... <br> (Facebook) (Twitter) (Whatsapp) (Email)</p>
-	<p id="updateday">Days... <br> Monday - Tuesday - Wednesday - Thursday - Friday - Weekend </p>
+	<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>
+	
 
-	<p id="footer">www.newspaper.nl</p>
+	<p id="footer"><img src="images/footer.png" alt="Footer"></p>
 
 </div><!-- end #content -->
 
