commented out real content, added tabs for sub-content

--- a/prototype.html
+++ b/prototype.html
@@ -84,7 +84,7 @@
 
 	<div id="sortable">
 
-		<div id="paginated-content">
+		<!--<div id="paginated-content">
 <p>This is test text and the copy comes from here: <a href="https://www.theguardian.com/technology/2016/apr/22/facebook-algorithm-change-pieces-people-actually-read">https://www.theguardian.com/technology/2016/apr/22/facebook-algorithm-change-pieces-people-actually-read</a>.</p>
 <p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
 <p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
@@ -96,14 +96,14 @@
 <p>A second change to the algorithm will also be rolling out alongside the reading time tweak, as Facebook begins to force more diversity into the News Feed. The company will roll out “an update to reduce how often people see several posts in a row from the same source in their News Feed”.</p>
 <p>Facebook traffic is so important to most media organisations that the tweak to the algorithm will likely have a direct effect on what gets produced by some. Most famously, an algorithm change in August 2013, which reposted particularly popular stories to your News Feed again if you didn’t scroll down far enough to see them the first time, resulted in an explosion of traffic to news websites from the social network, and almost single-handedly popularised the style of headline invented by leftwing viral media site Upworthy (“When a flood left people stranded, this man had the perfect rescue vehicle.” “These bizarre circles have baffled scientists for years. Now we may know what they are.” “Coral bleaching is about to cause one of the biggest breakups of all time.”)</p>
 <p>But when the algorithm changed, so did the traffic. In January this year, Upworthy laid off 14 of its 97 employees and pivoted towards video content. The company’s video traffic had grown 33 times in the previous 11 months – thanks, partially, to another change in Facebook’s algorithm.</p>
-		</div><!-- end #paginated-content -->
+		</div>--><!-- end #paginated-content -->
 
-		<div id="img-gallery">
+		<!-- <div id="img-gallery"> -->
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
-			<img class="article-img" src="images/article-01.jpg" />
+			<!--<img class="article-img" src="images/article-01.jpg" />
 			<img class="article-img" src="images/article-02.jpg" />
-			<img class="article-img" src="images/article-03.jpg" />
-		</div><!-- end article img-gallery -->
+			<img class="article-img" src="images/article-03.jpg" />-->
+		<!-- </div> --><!-- end article img-gallery -->
 
 		<p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p>
 
@@ -116,8 +116,20 @@
 	</div><!-- end #article -->
 
 	<!-- explore -->
-	<div  class="tabContent"  id="explore">
+	<div class="tabContent"  id="explore">
 		<p>Hello, this is the EXPLORE tab.</p>
+		<!-- tab -->
+		<ul class="intTab">
+			<li class="selected"><a href="#tab1">Tab 1</a></li>
+			<li><a href="#tab2">Tab 2</a></li>
+		</ul>
+		<!-- end tab -->
+		<!-- explore content -->
+		<div class="tabIntContent" id="tab1">
+			Content tab 1</div>
+			<div class="tabIntContent" id="tab2">
+				Content tab 2</div>
+				<!-- end explore content -->
 	</div><!-- end #explore -->
 
 	<!-- discussion -->
