--- a/prototype.html
+++ b/prototype.html
@@ -79,13 +79,12 @@
 <div id="content">
 
 	<div class="tabContent" id="article">
-	<h2 id="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-	<p id="meta">Author Date Time</p>
+	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
+	<p id="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</p>
 
 	<div id="sortable">
 
-		<!--<div id="paginated-content">
-<p>This is test text and the copy comes from here: <a href="https://www.theguardian.com/technology/2016/apr/22/facebook-algorithm-change-pieces-people-actually-read">https://www.theguardian.com/technology/2016/apr/22/facebook-algorithm-change-pieces-people-actually-read</a>.</p>
+		<div id="paginated-content">
 <p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
 <p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
 <p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
@@ -93,35 +92,37 @@
 <p>It seems that part of the reason for this change is that only recently has Facebook had enough data on user behaviour off-site to create the right metrics. The site still can’t tell what happens to desktop users who click a link that takes them outside Facebook, but the steadily increasing proportion of users who are on the company’s mobile apps, as well as the introduction of Instant Articles, means that Facebook can now hoover up data about a critical mass of its users.</p>
 <p>That also lets it be smart in terms of how it measures reading time. For instance, the algorithm won’t count loading time towards average time reading, only actual time spent reading and watching content.</p>
 <p>The change is the latest example of Facebook tweaking the News Feed in ways that it hopes will encourage users to spend more time on the site. Last summer, it put a similar change in place when it came to posts on the site, promoting the posts which were read for more time even if no links were clicked. And in 2014, it changed the algorithm to penalise “clickbait” – links which users opened then immediately closed. “We learned that this often happened when the article someone clicked on wasn’t what they had expected from the post or the headline,” Blank and Xu wrote.</p>
-<p>A second change to the algorithm will also be rolling out alongside the reading time tweak, as Facebook begins to force more diversity into the News Feed. The company will roll out “an update to reduce how often people see several posts in a row from the same source in their News Feed”.</p>
-<p>Facebook traffic is so important to most media organisations that the tweak to the algorithm will likely have a direct effect on what gets produced by some. Most famously, an algorithm change in August 2013, which reposted particularly popular stories to your News Feed again if you didn’t scroll down far enough to see them the first time, resulted in an explosion of traffic to news websites from the social network, and almost single-handedly popularised the style of headline invented by leftwing viral media site Upworthy (“When a flood left people stranded, this man had the perfect rescue vehicle.” “These bizarre circles have baffled scientists for years. Now we may know what they are.” “Coral bleaching is about to cause one of the biggest breakups of all time.”)</p>
-<p>But when the algorithm changed, so did the traffic. In January this year, Upworthy laid off 14 of its 97 employees and pivoted towards video content. The company’s video traffic had grown 33 times in the previous 11 months – thanks, partially, to another change in Facebook’s algorithm.</p>
-		</div>--><!-- end #paginated-content -->
 
-		<!-- <div id="img-gallery"> -->
+
+		</div><!-- end #paginated-content -->
+
+	<p id="GOEXPLORE">You've read 5 articles from us... <br> Time to GO EXPLORE more.</p>
+
+		 <div id="img-gallery"> 
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
-			<!--<img class="article-img" src="images/article-01.jpg" />
+			<img class="article-img" src="images/article-01.jpg" />
 			<img class="article-img" src="images/article-02.jpg" />
-			<img class="article-img" src="images/article-03.jpg" />-->
-		<!-- </div> --><!-- end article img-gallery -->
+			<img class="article-img" src="images/article-03.jpg" />
+		 </div> <!-- end article img-gallery -->
 
-		<p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p>
+		<!-- <p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p> -->
 
-		<p id="GOEXPLORE">You've read 5 articles from us... <br> Time to GO EXPLORE more.</p>
+		
 
-		<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p>
-	</div>
+		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
+
+	<p id= "poll"><img src="images/poll.png" alt="Poll"></p>
 
 	<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>
-	</div><!-- end #article -->
+	</div><!-- end #sortable -->
+</div><!-- end #article -->
 
 	<!-- explore -->
 	<div class="tabContent"  id="explore">
-		<p>Hello, this is the EXPLORE tab.</p>
 		<!-- tab -->
 		<ul class="intTab">
-			<li class="selected"><a href="#tab1">Tab 1</a></li>
-			<li><a href="#tab2">Tab 2</a></li>
+			<li class="selected"><a href="#tab1">Public</a></li>
+			<li><a href="#tab2">Personal</a></li>
 		</ul>
 		<!-- end tab -->
 		<!-- explore content -->
