--- a/prototype.html
+++ b/prototype.html
@@ -30,7 +30,8 @@
 			<div class="header">
 				<i class="fa fa-align-justify fa-lg" aria-hidden="true"></i>
 				<h1 id="logo">Newspaper</h1>
-				<img class="explore" src="images/explorebutton.png" />
+				<i class="fa fa-user fa-lg" aria-hidden="true" alt="user"></i>
+				<i class="fa fa-home fa-lg" aria-hidden="true" alt="home"></i>
 			</div><!-- end .header -->
 
 		<div class="navigation">
@@ -38,7 +39,8 @@
 				<!-- for now, we're using images but we'll soon probably use vector instead -->
 			 	<li>
 					<a href="#explore">
-						<img src="images/RELATEDARTBUTTON2.png" alt="Explore"/>
+						<i class="fa fa-compass fa-x2" aria-hidden="true"></i>
+						<!-- <img src="images/RELATEDARTBUTTON2.png" alt="Explore"/> -->
 					</a>
 				 </li>
 				<li class="selected">
