--- a/prototype.html
+++ b/prototype.html
@@ -39,7 +39,7 @@
 				<!-- for now, we're using images but we'll soon probably use vector instead -->
 			 	<li>
 					<a href="#explore">
-						<i class="fa fa-compass fa-x2" aria-hidden="true"></i>
+						<i class="fa fa-compass fa-2x" aria-hidden="true"></i>
 						<!-- <img src="images/RELATEDARTBUTTON2.png" alt="Explore"/> -->
 					</a>
 				 </li>
@@ -83,6 +83,11 @@
 	<div class="tabContent" id="article">
 	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
 	<p id="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</p>
+		
+		<div class= "options"> 
+		  <i class="fa fa-volume-up fa-lg" aria-hidden="true"></i>
+		  <i class="fa fa-bookmark fa-lg" aria-hidden="true"></i>
+		</div>
 
 	<div id="sortable">
 
@@ -109,9 +114,11 @@
 
 		<!-- <p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p> -->
 
-		
-
 		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
+
+	<i class="fa fa-share-alt fa-lg"> 60 Shares</i>
+
+	<br>
 
 	<p id= "poll"><img src="images/poll.png" alt="Poll"></p>
 
