images explore poll added

--- a/prototype.html
+++ b/prototype.html
@@ -121,7 +121,7 @@
 
 	<i class="fa fa-share-alt fa-lg"> 60 Shares</i>
 
-	<img id="poll" src="images/poll.png" alt="Poll">
+	<img id="poll" src="images/Poll-article-page.png" alt="Poll">
 
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
@@ -157,7 +157,7 @@
 		<!-- end tab -->
 		<!-- explore content -->
 		<div class="tabIntContent" id="tab1">
-			<img src="images/Explore-Public.png" alt="Explore Public Tab" /></div>
+			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" /></div>
 			<div class="tabIntContent" id="tab2">
 				Content tab 2</div>
 				<!-- end explore content -->
