--- a/prototype.html
+++ b/prototype.html
@@ -121,7 +121,7 @@
 
 	<i class="fa fa-share-alt fa-lg"> 60 Shares</i>
 
-	<img id="poll" src="images/Poll-article-page.png" alt="Poll">
+	<img id="poll" src="images/poll.png" alt="Poll">
 
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
@@ -140,7 +140,7 @@
 		<span>Monday</span> <span>Tuesday</span> <span>Wednesday</span> <span>Thursday</span> <span>Friday</span> <span>Weekend</span>
 	</div>
 	<div class="tabUpdContent" id="where">
-		<span><i class="fa fa-facebook" aria-hidden="true"></i></span> <span>Email</span> <span>Twitter</span> <span>Whatsapp</span>
+		<span><i class="fa fa-facebook" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o" aria-hidden="true"></i></span> <span><i class="fa fa-twitter" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp" aria-hidden="true"></i></span>
 	</div>
 </div>
 
@@ -157,7 +157,7 @@
 		<!-- end tab -->
 		<!-- explore content -->
 		<div class="tabIntContent" id="tab1">
-			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" /></div>
+			<img src="images/Explore-Public.png" alt="Explore Public Tab" /></div>
 			<div class="tabIntContent" id="tab2">
 				Content tab 2</div>
 				<!-- end explore content -->
