--- a/prototype.html
+++ b/prototype.html
@@ -72,7 +72,7 @@
 				</li>
 			 	<li>
 					<a href="#discussion">
-						<img src="images/DISCUSSIONBUTTON2.png" alt="Discussion"/>
+						<i class="fa fa-commenting-o fa-2x" aria-hidden="true"></i>
 					</a>
 				</li>
 			 </ul>
