added personal explore

--- a/prototype.html
+++ b/prototype.html
@@ -102,7 +102,7 @@
 		  <i class="fa fa-bookmark fa-lg" aria-hidden="true"></i>
 		</span>
 
-	<div id="sortable">
+	<div id="mainArticlePage">
 
 		<div id="paginated-content">
 			<div class="articleTextPage">
@@ -164,9 +164,21 @@
 		<!-- end tab -->
 		<!-- explore content -->
 		<div class="tabIntContent" id="tab1">
-			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" /></div>
-			<div class="tabIntContent" id="tab2">
-				Content tab 2</div>
+			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" />
+		</div>
+				
+		<div class="tabIntContent" id="tab2">
+
+				    <img src="images/explore-personal-search bar.png" alt="Search">
+
+				<div id="sortable">
+				   <img src="images/explore-personal-summary of the year.png" alt="Summary">
+				   <img src="images/explore-personal-authors.png" alt="Authors">
+				   <img src="images/explore-personal-topics.png" alt="Topics">
+
+				</div>		
+
+		</div> <!-- end Personal Explore tab2 --> 
 				<!-- end explore content -->
 	</div><!-- end #explore -->
 
