changed fonts News Update

--- a/prototype.html
+++ b/prototype.html
@@ -133,8 +133,8 @@
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
 <div id="newsUpdate">
-	<h3>Stay Updated with the Newspaper</h3>
-	<p>Only get the notifications you want, when you want and where you want.</p>
+	<h3 id="newUpdateHeader">Stay Updated with the News</h3>
+	<p id="newUpdateText">Get the news you want, when you want and where you want.</p>
 	<ul class="updateTabs">
 		<li class="selected"><a href="#what">What</a></li>
 		<li><a href="#when">When</a></li>
