--- a/prototype.html
+++ b/prototype.html
@@ -102,7 +102,7 @@
 		  <i class="fa fa-bookmark fa-lg" aria-hidden="true"></i>
 		</span>
 
-	<div id="sortable">
+	<div id="mainArticlePage">
 
 		<div id="paginated-content">
 			<div class="articleTextPage">
@@ -126,13 +126,13 @@
 
 		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
 
-	<i class="fa fa-share-alt fa-lg"> 60 Shares</i>
+		<span><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span>
 
-	<img id="poll" src="images/Poll-article-page.png" alt="Poll">
+	<img class="poll" src="images/html-poll.png" alt="Poll">
 
 	<!--<p id="updatetags"><img src="images/updatetags.png" alt="Update"></p>-->
 
-<div id="newsUpdate">
+<div id="newsUpdate" >
 	<h3 id="newUpdateHeader">Stay Updated with the News</h3>
 	<p id="newUpdateText">Get the news you want, when you want and where you want.</p>
 	<ul class="updateTabs">
@@ -151,6 +151,8 @@
 	</div>
 </div>
 
+<img class="subscribe" src="images/html-subscribe.png" alt="subscribe">
+
 	</div><!-- end #sortable -->
 </div><!-- end #article -->
 
@@ -164,9 +166,21 @@
 		<!-- end tab -->
 		<!-- explore content -->
 		<div class="tabIntContent" id="tab1">
-			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" /></div>
-			<div class="tabIntContent" id="tab2">
-				Content tab 2</div>
+			<img src="images/Explore public final-large plus signs-01.png" alt="Explore Public Tab" />
+		</div>
+				
+		<div class="tabIntContent" id="tab2">
+
+				    <img src="images/explore-personal-search bar.png" alt="Search">
+
+				<div id="sortable">
+				   <img src="images/explore-personal-summary of the year.png" alt="Summary">
+				   <img src="images/explore-personal-authors.png" alt="Authors">
+				   <img src="images/explore-personal-topics.png" alt="Topics">
+
+				</div>		
+
+		</div> <!-- end Personal Explore tab2 --> 
 				<!-- end explore content -->
 	</div><!-- end #explore -->
 
