--- a/prototype.html
+++ b/prototype.html
@@ -95,7 +95,8 @@
 
 	<div class="tabContent" id="article">
 	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
-	<span id="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
+	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
+	
 
 		<span class= "options">
 		  <i class="fa fa-volume-up fa-lg" aria-hidden="true"></i>
@@ -109,6 +110,7 @@
 <p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
 <p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
 <p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
+<span class="meta"><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span>
 </div>
 
 		</div><!-- end #paginated-content -->
@@ -126,7 +128,6 @@
 
 		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
 
-		<span><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span>
 
 	<img class="poll" src="images/html-poll.png" alt="Poll">
 
