pagenr imgnr exploreTabLink logInScreen share&comment button

--- a/prototype.html
+++ b/prototype.html
@@ -109,17 +109,20 @@
 <p class="lead">Facebook is changing its algorithm yet again, and this time it wants to show you more things that you’ll actually spend time reading or watching.</p>
 <p>The social network looks at a wealth of data when deciding which posts you actually see on News Feed, but until now it hasn’t cared too much about what you actually do when you click away from Facebook. It says that’s going to change.</p>
 <p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
+<p class="pagenr">1/6</p>
 </div>
 
 		</div><!-- end #paginated-content -->
 
-	<p><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
+	<p id="interaction"><a id="GOEXPLORE" href="#explore">You've read 5 articles from us... <br> Time to GO EXPLORE more.</a></p>
 
 		 <div id="img-gallery">
 			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
 			<img class="article-img" src="images/article-01.jpg" />
 			<!--<img class="article-img" src="images/article-02.jpg" />
 			<img class="article-img" src="images/article-03.jpg" />-->
+			<p class="imgnr">1/3</p>
+
 		 </div> <!-- end article img-gallery -->
 
 		<!-- <p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p> -->
@@ -168,6 +171,9 @@
 		</div>
 				
 		<div class="tabIntContent" id="tab2">
+			<div id="logIn">
+				<img src="images/login.png" alt="logIn">
+			</div>
 
 				    <img src="images/explore-personal-search bar.png" alt="Search">
 
@@ -184,8 +190,9 @@
 
 	<!-- discussion -->
 	<div  class="tabContent" id="discussion">
-		<p>Hello, this is the DISCUSSION tab.</p>
-	</div><!-- end #explore -->
+		<img src="images/html-comments-01.png" alt="Discussion">
+
+	</div><!-- end #discussion -->
 
 	<p id="footer"><img src="images/footer.png" alt="Footer"></p>
 
@@ -193,6 +200,10 @@
 
 	<div id="share">
 		<i class="fa fa-share-alt fa-lg" aria-hidden="true"></i> <!-- Here: SHARE BUTTON -->
+	</div>
+
+	<div id="comment">
+		<img src="images/html-comments-share thoughts02.png" alt="shareThoughts">
 	</div>
 
 	<div id="backtotop">
