comment fix linkexplore

--- a/prototype.html
+++ b/prototype.html
@@ -112,10 +112,8 @@
 <p>“We’re learning that the time people choose to spend reading or watching content they clicked on from News Feed is an important signal that the story was interesting to them,” said software engineer Moshe Blank and research scientist Jie Xu in a post on the company’s website.</p>
 
 <p class="pagenr">1/6</p>
-
-<span class="meta"><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span>
-
 </div>
+
 
 		</div><!-- end #paginated-content -->
 
@@ -133,6 +131,9 @@
 		<!-- <p id="TextCard1"><img src="images/TEXTCARD1.png" alt="TextCard1"/></p> -->
 
 		<!--<p id="ImageCard1"><img src="images/IMAGECARD1.png" alt="ImageCard1"/></p> -->
+
+<!-- <span class="meta"><i class="fa fa-share-alt" aria-hidden="true"></i>60 Shares</span> -->
+
 
 
 	<img class="poll" src="images/html-poll.png" alt="Poll">
