changed navigation to fixed, thus added css file for the class .top

--- a/prototype.html
+++ b/prototype.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-	<div class="top"> <!-- Here: hamburger button & LOGO -->
+	<nav class="top"> <!-- Here: hamburger button & LOGO -->
 			<div class="header">
 				<i class="fa fa-align-justify fa-lg" aria-hidden="true"></i>
 				<h1 id="logo">Newspaper</h1>
@@ -49,7 +49,7 @@
 
 		<div class="navigation">
 			 <ul class="pagetabs">
-				<!-- for now, we're using images but we'll soon probably use vector instead -->
+				<!-- we are using font awesome instead of images as before-->
 			 	<li id="exploreTour">
 					<a href="#explore">
 						<i class="fa fa-compass fa-2x" aria-hidden="true"></i>
@@ -84,21 +84,20 @@
 				</li>
 			 </ul>
 		</div><!-- end .navigation -->
-	</div><!-- end .top -->
+	</nav><!-- end .top -->
 
 		<!--<div class="login">
 			<button class="loginbutton">Log In</button>
 		</div>-->
 
 <!-- Here: CONTENT-->
-<div id="content">
+<div class="content">
 
 	<div class="tabContent" id="article">
 	<h2 id="title">Facebook is going to start showing you pieces people actually read</h2>
 	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 	
-
-		<span class= "options">
+	<span class= "options">
 		  <i class="fa fa-volume-up fa-lg" aria-hidden="true"></i>
 		  <i class="fa fa-bookmark fa-lg" aria-hidden="true"></i>
 		</span>
@@ -204,7 +203,9 @@
 
 	<p id="footer"><img src="images/footer.png" alt="Footer"></p>
 
+
 </div><!-- end #content -->
+
 
 	<div id="share">
 		<i class="fa fa-share-alt fa-lg" aria-hidden="true"></i> <!-- Here: SHARE BUTTON -->
@@ -217,6 +218,9 @@
 	<div id="backtotop">
 		<i class="fa fa-angle-double-up fa-lg" aria-hidden="true"></i> <!-- Here: ARROWS UP BUTTON -->
 	</div>
+
+
+
 
 <!--<script>
     $(document).ready(function(){
