--- a/prototype.html
+++ b/prototype.html
@@ -56,17 +56,15 @@
 	<!-- this is the code for the svg of the compass -->
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!-- Created with Inkscape (http://www.inkscape.org/) -->
-				 <svg class="tab-icon" height="30" width="30" viewBox="0 0 50 50"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"  version="1.1"><g transform="translate(-342.75096,-335.55404)">
-				 	<g transform="translate(44.219714,-162.50846)">
-				 		<path class="svg-element" d="m330.49 510.53-13.36 5.72c-0.19 0.08-0.34 0.23-0.42 0.42l-5.73 13.35c-0.12 0.3-0.06 0.66 0.18 0.89 0.15 0.16 0.36 0.24 0.57 0.24 0.1 0 0.21-0.02 0.32-0.07l13.36-5.72c0.19-0.08 0.34-0.23 0.43-0.42l5.72-13.35c0.13-0.3 0.06-0.66-0.17-0.89-0.23-0.23-0.59-0.3-0.89-0.17zm-17.22 18.28 4.46-10.4 5.95 5.95-10.4 4.46zm11.54-5.6-5.95-5.95 10.4-4.46-4.45 10.41z"/>
-				 		<path id="compass"  d="m321.27 498.42c-12.35 0-22.39 10.04-22.39 22.39 0 12.34 10.05 22.39 22.39 22.39 12.35 0 22.39-10.05 22.39-22.39 0-12.35-10.04-22.39-22.39-22.39z" />
-				 		<path class="svg-element" d="m321.27 504.41c0.62 0 1.13-0.51 1.13-1.14 0-0.63-0.51-1.14-1.13-1.14-0.62 0-1.13 0.51-1.13 1.14 0 0.63 0.51 1.14 1.13 1.14z" />
-				 		<path class="svg-element" d="m321.27 536.47c-0.62 0-1.13 0.51-1.13 1.13 0 0.63 0.51 1.14 1.13 1.14 0.62 0 1.13-0.51 1.13-1.14 0-0.62-0.51-1.13-1.13-1.13z" />
-				 		<path class="svg-element" d="m338.44 519.68c-0.62 0-1.14 0.51-1.14 1.13 0 0.63 0.51 1.14 1.14 1.14 0.62 0 1.13-0.51 1.13-1.14 0-0.62-0.51-1.13-1.13-1.13z" />
-				 		<path class="svg-element" d="m305.82 519.68c-0.62 0-1.13 0.51-1.13 1.13 0 0.63 0.51 1.14 1.13 1.14 0.62 0 1.13-0.51 1.13-1.14 0-0.62-0.51-1.13-1.13-1.13z" />
-				 		<path class="svg-element" d="m321.32 502.11c-0.62 0-1.14 0.51-1.14 1.13 0 0.63 0.51 1.14 1.14 1.14 0.62 0 1.13-0.51 1.13-1.14 0-0.62-0.51-1.13-1.13-1.13z" /></g></g>
-				 	</svg>
-						 								 
+				 <svg class="tab-icon" height="30" width="30" viewBox="0 0 47 45"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" >
+						 <path  class="svg-element" d="m31.574,12.389-13.074,5.6021c-0.18911,0.08104-0.33191,0.22771-0.4149,0.4149l-5.604,13.068c-0.11965,0.29718-0.05598,0.64453,0.17368,0.87031,0.14665,0.15245,0.35507,0.23349,0.55769,0.23349,0.10227,0,0.21034-0.0232,0.30875-0.06558l13.074-5.6021c0.18911-0.08104,0.33578-0.22772,0.41876-0.4149l5.6001-13.068c0.1235-0.29525,0.0598-0.6426-0.16982-0.87224-0.22577-0.22578-0.57699-0.29139-0.87031-0.16596zm-16.854,17.895,4.3613-10.182,5.8202,5.8202-10.182,4.3613zm11.298-5.4805-5.824-5.8202,10.183-4.3651-4.3593,10.185z"/>
+						 <path  id="compass" d="m22.547,0.53468c-12.084,0-21.916,9.8301-21.916,21.914,0,12.082,9.834,21.916,21.916,21.916,12.088,0,21.916-9.836,21.916-21.916,0.00098-12.084-9.8292-21.914-21.916-21.914z" />
+						 <path  style="stroke-width:0;" class="svg-element"d="m22.547,6.3992c0.60981,0,1.1077-0.49787,1.1077-1.1115,0-0.61366-0.49787-1.1115-1.1077-1.1115-0.60979,0-1.1077,0.49788-1.1077,1.1115,0,0.61366,0.49788,1.1115,1.1077,1.1115z" />
+						 <path class="svg-element" d="m22.547,37.775c-0.60979,0-1.1077,0.49788-1.1077,1.1058,0,0.61366,0.49788,1.1115,1.1077,1.1115,0.60981,0,1.1077-0.49787,1.1077-1.1115,0.002-0.60787-0.49594-1.1058-1.1077-1.1058z" />
+						 <path class="svg-element" d="m39.351,21.341c-0.60981,0-1.1115,0.49594-1.1115,1.1077,0,0.61559,0.50173,1.1135,1.1115,1.1135,0.60979,0,1.1077-0.49787,1.1077-1.1135,0-0.61173-0.49788-1.1077-1.1077-1.1077z" />
+						 <path  class="svg-element" d="m7.4199,21.341c-0.6098,0-1.1077,0.49594-1.1077,1.1077,0,0.61559,0.49788,1.1135,1.1077,1.1135,0.6098,0,1.1077-0.49787,1.1077-1.1135,0-0.61173-0.49787-1.1077-1.1077-1.1077z" />
+						 <path  class="svg-element" d="m22.597,4.1492c-0.6098,0-1.1115,0.49595-1.1115,1.1077,0,0.61559,0.50173,1.1135,1.1115,1.1135,0.6098,0,1.1077-0.49788,1.1077-1.1135,0-0.61172-0.49788-1.1077-1.1077-1.1077z" />
+				 	</svg>						 								 
 					</a>
 				 </li>
 				<li class="selected">
@@ -75,29 +73,24 @@
 	<!-- this is the code for the svg of the article section-->
 				 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 
-				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 60 60"  version="1.1"><defs id="defs5468"/>
-						<metadata id="metadata5471"/><g id="layer1" transform="matrix(2.5755217,0,0,2.5755217,-516.1798,-982.12384)">
-						<g transform="translate(-326.20743,-190.57619)"  >
-							<path  class="svg-element" d="m540.46 589.13-5.66 0c-0.65 0-0.87 0.31-0.94 0.49-0.08 0.18-0.13 0.56 0.32 1.01l2.36 2.36c0.29 0.29 0.68 0.45 1.09 0.45 0.41 0 0.8-0.16 1.09-0.45l2.36-2.36c0.46-0.46 0.4-0.83 0.32-1.01-0.07-0.18-0.3-0.49-0.95-0.49z" />
-							<path  class="svg-element" d="m547.7 581.84-2.36-2.36c-0.25-0.25-0.5-0.37-0.75-0.37-0.35 0-0.75 0.26-0.75 1l0 5.66c0 0.74 0.4 1 0.75 1 0.25 0 0.5-0.13 0.75-0.37l2.36-2.36c0.29-0.29 0.45-0.68 0.45-1.09 0-0.41-0.16-0.8-0.45-1.09z" />
-							<path class="svg-element" d="m534.8 576.73 5.66 0c0.65 0 0.87-0.3 0.95-0.49 0.08-0.18 0.14-0.56-0.32-1.02l-2.36-2.36c-0.58-0.58-1.6-0.58-2.19 0l-2.36 2.36c-0.46 0.46-0.4 0.83-0.32 1.01 0.44 0.37 0.51 0.48 0.94 0.5z" />
-							<path  class="svg-element" d="m530.68 579.1c-0.25 0-0.5 0.13-0.75 0.37l-2.36 2.36c-0.29 0.29-0.45 0.68-0.45 1.09 0 0.42 0.16 0.8 0.45 1.09l2.36 2.36c0.25 0.25 0.5 0.38 0.75 0.38 0.25 0 0.47-0.13 0.6-0.35 0.1-0.17 0.15-0.39 0.15-0.65l0-5.66c-0.05-0.56-0.34-0.89-0.75-0.99z" /></g>
-							<rect  width="8.66" height="8.66" x="207.1" y="388.08" rx="0" ry="0.66" style="stroke-linejoin:round;stroke-miterlimit:4;stroke-width:0.7;"/></g>
-						</svg>
-
-					
+				<svg class="tab-icon"  xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 60 60"  version="1.1"><defs id="defs5468"/>											
+					<path class="svg-element" d="m35.632,44.36-14.577,0c-1.6741,0-2.2407,0.79841-2.421,1.262-0.20604,0.46359-0.33482,1.4423,0.82417,2.6013l6.0782,6.0782c0.7469,0.7469,1.7514,1.159,2.8073,1.159,1.056,0,2.0604-0.41208,2.8073-1.159l6.0782-6.0782c1.1847-1.1847,1.0302-2.1377,0.82417-2.6013-0.18029-0.46359-0.77266-1.262-2.4467-1.262z" />
+					 <path class="svg-element" d="m54.279,25.585-6.0782-6.0782c-0.64388-0.64388-1.2878-0.95294-1.9316-0.95294-0.90143,0-1.9316,0.66964-1.9316,2.5755v14.577c0,1.9059,1.0302,2.5755,1.9316,2.5755,0.64388,0,1.2878-0.33482,1.9316-0.95294l6.0782-6.0782c0.7469-0.7469,1.159-1.7514,1.159-2.8073,0-1.056-0.41208-2.0604-1.159-2.8073z" />
+					 <path class="svg-element" d="m21.055,12.424,14.577,0c1.6741,0,2.2407-0.77266,2.4467-1.262,0.20604-0.46359,0.36057-1.4423-0.82417-2.627l-6.078-6.0786c-1.4938-1.4938-4.1208-1.4938-5.6404,0l-6.0782,6.0782c-1.1847,1.1847-1.0302,2.1377-0.82417,2.6013,1.1332,0.95294,1.3135,1.2363,2.421,1.2878z" />
+					 <path class="svg-element" d="m10.444,18.528c-0.64388,0-1.2878,0.33482-1.9316,0.95294l-6.0782,6.0782c-0.7469,0.7469-1.159,1.7514-1.159,2.8073,0,1.0817,0.41208,2.0604,1.159,2.8073l6.0782,6.0782c0.64388,0.64388,1.2878,0.9787,1.9316,0.9787,0.64388,0,1.2105-0.33482,1.5453-0.90143,0.25755-0.43784,0.38633-1.0045,0.38633-1.6741v-14.577c-0.128-1.443-0.875-2.293-1.931-2.55z" />
+					 <rect  rx="0" ry="1.6998" height="22.304" width="22.304" y="17.385" x="17.211" style="stroke-linejoin:round;stroke-miterlimit:4;"/>
+						</svg>					
 					</a>
 				</li>
 			 	<li id="discussionTour">
 					<a href="#discussion">
 	<!-- this is the code for the svg of the discussion section-->
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg class="tab-icon" id="comment-bubble"  height="30px" width="30px" viewBox="0 0 130 130"xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"  version="1.1">
-						<g transform="translate(-297.56273,-309.68797)"><g transform="translate(-172.18243,85.083111)">
-							<g transform="matrix(5.139704,0,0,5.139704,-1955.2443,-1438.8038)"><path class="svg-element" d="m478.25 336.04c-0.99 0-1.79-0.8-1.79-1.79 0-0.98 0.8-1.79 1.79-1.79 0.98 0 1.78 0.8 1.78 1.79 0 0.99-0.8 1.79-1.78 1.79z" />
-								<path class="svg-element" d="m483.61 336.04c-0.98 0-1.79-0.8-1.79-1.79 0-0.98 0.8-1.79 1.79-1.79 0.98 0 1.79 0.8 1.79 1.79 0 0.99-0.8 1.79-1.79 1.79z" />
-								<path class="svg-element" d="m488.97 336.04c-0.98 0-1.79-0.8-1.79-1.79 0-0.98 0.8-1.79 1.79-1.79 0.99 0 1.79 0.8 1.79 1.79 0 0.99-0.8 1.79-1.79 1.79z" /></g><g transform="matrix(-5.139704,0,0,5.139704,3015.9905,-1438.8038)" >
-								<path  d="M490.44 347.07 487.17 343.71c-1.16 0.35-2.35 0.52-3.56 0.52-6.23 0-11.29-4.51-11.29-10.05 0-5.54 5.07-10.04 11.3-10.04 6.23 0 11.3 4.51 11.3 10.04 0 2.91-1.41 5.66-3.88 7.57l1.08 4.82z" /></g></g></g>
+					<svg class="tab-icon" id="comment-bubble"  height="30" width="30" viewBox="0 0 125 125"xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg"  >
+							<path class="svg-element" d="m31.206,63.732c-5.0883,0-9.2001-4.1118-9.2001-9.2001,0-5.0369,4.1118-9.2001,9.2001-9.2001,5.0369,0,9.1487,4.1118,9.1487,9.2001s-4.1118,9.2001-9.1487,9.2001z"/>
+							 <path class="svg-element"  d="m59.823,63.732c-5.0369,0-9.2001-4.1118-9.2001-9.2001,0-5.0369,4.1118-9.2001,9.2001-9.2001,5.0369,0,9.2001,4.1118,9.2001,9.2001s-4.1118,9.2001-9.2001,9.2001z" />
+							 <path class="svg-element"  d="m88.244,63.372c-5.0369,0-9.2001-4.1118-9.2001-9.2001,0-5.0369,4.1118-9.2001,9.2001-9.2001s9.2001,4.1118,9.2001,9.2001-4.1118,9.2001-9.2001,9.2001z" />
+							 <path d="m22.615,122.94,19.788-19.788c5.962,1.7989,12.078,2.6726,18.297,2.6726,32.02,0,58.027-23.18,58.027-51.654s-26.058-51.603-58.079-51.603c-32.02,0-58.079,23.18-58.079,51.603,0,14.957,7.247,29.091,19.942,38.908v29.862z" />
 							</svg>
 						</a>
 				</li>
