minor tweakings in the fonts on the article page. Added open sans to html header

--- a/prototype.html
+++ b/prototype.html
@@ -3,6 +3,8 @@
 
 <head>
 
+	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700italic,800,800italic,700' rel='stylesheet' type='text/css'>
+
 	<!-- for more info on the line below, please check: http://www.w3schools.com/css/css_rwd_viewport.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="UTF-8">
@@ -39,9 +41,16 @@
 <body>
 	<nav class="top"> <!-- Here: hamburger button & LOGO -->
 			<div class="header">
-				<i class="fa fa-align-justify fa-lg" aria-hidden="true"></i>
-				<h1 id="logo">Newspaper</h1>
+				<!--hamburger svg-->
+				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+						<!-- Created with Inkscape (http://www.inkscape.org/) -->
+						<svg id="fill-svg" class="main-nav-svg" height="30" width="30"  viewbox="0 0 60 60" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">	
+						 <path d="m47.568,1.6543-44.826,0c-0.60105,0-1.0877,0.76152-1.0877,1.6836,0,0.93441,0.48669,1.6877,1.0877,1.6877h44.826c0.60104,0,1.0904-0.75741,1.0904-1.6877-0.0027-0.92206-0.48935-1.6836-1.0904-1.6836z" />
+						 <path d="M47.568,16.159h-44.826c-0.60105,0-1.0877,0.76152-1.0877,1.6918,0,0.92618,0.48669,1.6836,1.0877,1.6836h44.826c0.60104,0,1.0904-0.76152,1.0904-1.6836-0.0027-0.93441-0.48935-1.6918-1.0904-1.6918z" />
+						 <path d="m47.124,30.667-43.935,0c-0.60105,0-1.0877,0.76152-1.0877,1.6877s0.48669,1.6877,1.0877,1.6877h43.938c0.6037,0,1.0877-0.76152,1.0877-1.6877s-0.48669-1.6877-1.0904-1.6877z" />
+						</svg>
 				<span id="service">
+					<h1 id="logo">NEWSPAPER</h1>
 				<i class="fa fa-user fa-lg" aria-hidden="true" alt="user"></i>
 				<i class="fa fa-home fa-lg" aria-hidden="true" alt="home"></i>
 			</span>
